# crewAI

newcrew/: README.md  pyproject.toml  report.md
newcrew/src/newcrew/: __init__.py  crew.py  main.py
newcrew/src/newcrew/tools/: __init__.py  custom_tool.py
node/: README.md  pyproject.toml  requirements.txt
node/src/node/: agents.py  crew.py  main.py  requirements.txt
node/src/node/config/: agents.yaml  config.yaml  tasks.yaml
node/src/node/tools/: custom_tool.py  custom_tools.py  esm_migration_tool.py  native_module_migrator.py
tests/: test_newcrew_integration.py  test_newcrew_tool_integration.py
