[project]
name = "newcrew"
version = "0.1.0"
description = "NewCrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
newcrew = "newcrew.main:run"
run_crew = "newcrew.main:run"
train = "newcrew.main:train"
replay = "newcrew.main:replay"
test = "newcrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
